fixed the component

--- a/src/app/features/app.component.html
+++ b/src/app/features/app.component.html
@@ -1,9 +1,9 @@
-<!--The whole content below can be removed with the new code.-->
 <div style="text-align:center">
   <h1>
     <button (click)="getData()">Click me </button>
+   <div>{{dataToDisplay.quoteText}}</div>
+   <div>{{dataToDisplay.quoteAuthor}}</div>
+   <div>{{dataToDisplay.quoteLink}}</div>
   </h1>
-
-  
 </div>
 
